# production

./: .gitignore  =10.0.1  DSI_production.code-workspace  LICENSE  README.md  SETUP.md  conda_env_spec.txt  d  duplicate_conda_environment.sh  environment.yaml  pyproject.toml  requirements.txt
01-slides/: production_1_setup.ipynb  production_2_data_engineering.html  production_2_data_engineering.ipynb  production_3_2_pipeline.html  production_3_2_pipeline.ipynb  production_4_transforms.html  production_4_transforms.ipynb  production_5_hyperparams.html  production_5_hyperparams.ipynb  production_6_explainability.ipynb  production_7_distribution_shifts.html
01_materials/: 01_setup.ipynb  02_data_engineering.ipynb  03b_pipeline.ipynb  04_transforms.ipynb  05_hyperparams.ipynb  06_explainability.ipynb
02-assignments/: assignment_1.ipynb  assignment_2.ipynb
02-notebooks/: 01_setup.ipynb  02_data_engineering.ipynb  03a_sampling.ipynb  03b_pipeline.ipynb  04_transforms.ipynb  05_hyperparams.ipynb  06_explainability.ipynb  07_distribution_shifts.ipynb
02_notebooks/: 01_setup.ipynb  02_data_engineering.ipynb  03a_sampling.ipynb  03b_pipeline.ipynb  04_transforms.ipynb  05_hyperparams.ipynb
03-assignments/: assignment_2.ipynb
03_assignments/: assignment_1.ipynb  assignment_2.ipynb  assignment_3.ipynb
03_instructional_team/: README.md
05-src/: .env
05_src/: .env  best_pipe.pkl  credit_data_ingredient.py  credit_model_ingredient.py  credit_preproc_ingredient.py  data_manager.py
06-instructors/: README.md  requirements.txt
06_instructional_team/: README.md
(+641 files in other folders)
